unpackaged/main/default/objects/Campaign/fields/All_Agents__c.field-meta.xml
<CustomField>
    <fullName>All_Agents__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Denotes if this campaign applies to all agents or not</description>
    <inlineHelpText>Denotes if this campaign applies to all agents or not</inlineHelpText>
    <label>All Agents</label>
    <type>Checkbox</type>
</CustomField>