unpackaged/main/default/objects/Campaign/fields/Approval_Required__c.field-meta.xml
<CustomField>
    <fullName>Approval_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Denotes if approval is required for this campaign</description>
    <inlineHelpText>Denotes if approval is required for this campaign</inlineHelpText>
    <label>Is Approval Required?</label>
    <type>Checkbox</type>
</CustomField>