unpackaged/main/default/objects/Campaign/fields/Campaign_End_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Campaign_End_DateTime__c</fullName>
    <description>Stores End Date Time of campaign.</description>
    <label>Campaign End DateTime</label>
    <type>DateTime</type>
</CustomField>