unpackaged/main/default/objects/Campaign/fields/Campaign_Start_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Start_DateTime__c</fullName>
    <description>Stores Start Date Time of campaign.</description>
    <label>Campaign Start DateTime</label>
    <type>DateTime</type>
</CustomField>