unpackaged/main/default/objects/Campaign/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <description>Denotes the country of campaign members and is synonymous with currency field</description>
    <inlineHelpText>Denotes the country of campaign members and is synonymous with currency field</inlineHelpText>
    <label>Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Country</valueSetName>
    </valueSet>
</CustomField>