unpackaged/main/default/objects/Campaign/fields/Coupon_code__c.field-meta.xml
<CustomField>
    <fullName>Coupon_code__c</fullName>
    <description>Denotes coupon code to be applied as part of campaign</description>
    <inlineHelpText>Denotes coupon code to be applied as part of campaign</inlineHelpText>
    <label>Coupon code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>