unpackaged/main/default/objects/Campaign/fields/Event_End_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Event_End_DateTime__c</fullName>
    <description>Denotes exact end date and time of event based campaigns</description>
    <inlineHelpText>Denotes exact end date and time of event based campaigns</inlineHelpText>
    <label>Event End DateTime</label>
    <type>DateTime</type>
</CustomField>