unpackaged/main/default/objects/Campaign/fields/Event_Start_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Event_Start_DateTime__c</fullName>
    <description>Denotes exact start date and time of event based campaigns</description>
    <inlineHelpText>Denotes exact start date and time of event based campaigns</inlineHelpText>
    <label>Event Start DateTime</label>
    <type>DateTime</type>
</CustomField>