unpackaged/main/default/objects/Campaign/fields/PG_Campaign_Id__c.field-meta.xml
<CustomField>
    <fullName>PG_Campaign_Id__c</fullName>
    <label>PG Campaign Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>