unpackaged/main/default/objects/Campaign/fields/Source_Campaign_Reference__c.field-meta.xml
<CustomField>
    <fullName>Source_Campaign_Reference__c</fullName>
    <description>Reference of campaign in external system eg: CMS</description>
    <inlineHelpText>Reference of campaign in external system eg: CMS</inlineHelpText>
    <label>Source Campaign Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>