unpackaged/main/default/objects/Campaign/fields/Terms_and_conditions__c.field-meta.xml
<CustomField>
    <fullName>Terms_and_conditions__c</fullName>
    <description>Terms and conditions applicable to campaign</description>
    <label>Terms and conditions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>