unpackaged/main/default/objects/Campaign/fields/Theme__c.field-meta.xml
<CustomField>
    <fullName>Theme__c</fullName>
    <description>Denotes theme in Self Serve front-end application</description>
    <inlineHelpText>Denotes theme in Self Serve front-end application</inlineHelpText>
    <label>Theme</label>
    <length>255</length>
    <type>Text</type>
</CustomField>