unpackaged/main/default/objects/Campaign/fields/Used_Quota__c.field-meta.xml
<CustomField>
    <fullName>Used_Quota__c</fullName>
    <description>Denotes count of campaign members who are in valid statuses, usually in B2C context</description>
    <inlineHelpText>Denotes count of campaign members who are in valid statuses, usually in B2C context</inlineHelpText>
    <label>Used Quota</label>
    <summaryFilterItems>
        <field>CampaignMember.Status</field>
        <operation>equals</operation>
        <value>Approved, Re-eligible, Responded, Utilised</value>
    </summaryFilterItems>
    <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>