unpackaged/main/default/objects/Campaign/fields/VIP_Quota__c.field-meta.xml
<CustomField>
    <fullName>VIP_Quota__c</fullName>
    <description>Denotes the count of VIP agents allocated per year</description>
    <inlineHelpText>Denotes the count of VIP agents allocated per year</inlineHelpText>
    <label>VIP Quota</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>