unpackaged/main/default/objects/Campaign/recordTypes/Agent_Referral_Program.recordType-meta.xml
<RecordType>
    <fullName>Agent_Referral_Program</fullName>
    <active>true</active>
    <label>Agent Referral Program</label>
</RecordType>