unpackaged/main/default/objects/Campaign/recordTypes/B2B_Developer_Online_Form.recordType-meta.xml
<RecordType>
    <fullName>B2B_Developer_Online_Form</fullName>
    <active>true</active>
    <label>B2B Developer Online Form</label>
</RecordType>