unpackaged/main/default/objects/Campaign/recordTypes/B2B_TM_Events.recordType-meta.xml
<RecordType>
    <fullName>B2B_TM_Events</fullName>
    <active>true</active>
    <label>B2B TM Events</label>
</RecordType>