unpackaged/main/default/objects/Campaign/recordTypes/First_Timer.recordType-meta.xml
<RecordType>
    <fullName>First_Timer</fullName>
    <active>true</active>
    <label>First-Timer</label>
</RecordType>