unpackaged/main/default/objects/Campaign/recordTypes/First_Timer_Winback.recordType-meta.xml
<RecordType>
    <fullName>First_Timer_Winback</fullName>
    <active>true</active>
    <label>First-Timer Winback</label>
</RecordType>