unpackaged/main/default/objects/Campaign/recordTypes/FirstTimer.recordType-meta.xml
<RecordType>
    <fullName>FirstTimer</fullName>
    <active>true</active>
    <label>First Timer</label>
</RecordType>