unpackaged/main/default/objects/Campaign/recordTypes/Loyalty_Promotion.recordType-meta.xml
<RecordType>
    <fullName>Loyalty_Promotion</fullName>
    <active>true</active>
    <label>Loyalty Promotion</label>
</RecordType>