unpackaged/main/default/objects/Campaign/recordTypes/Marketing_Automation.recordType-meta.xml
<RecordType>
    <fullName>Marketing_Automation</fullName>
    <active>true</active>
    <label>Marketing Automation</label>
</RecordType>