unpackaged/main/default/objects/Campaign/recordTypes/Marketing_Promo.recordType-meta.xml
<RecordType>
    <fullName>Marketing_Promo</fullName>
    <active>true</active>
    <label>Marketing Promo</label>
</RecordType>