unpackaged/main/default/objects/Campaign/recordTypes/Renewal_Promotion.recordType-meta.xml
<RecordType>
    <fullName>Renewal_Promotion</fullName>
    <active>true</active>
    <label>Renewal Promotion</label>
</RecordType>