unpackaged/main/default/objects/Campaign/recordTypes/Self_Serve_Marketing_Promotion.recordType-meta.xml
<RecordType>
    <fullName>Self_Serve_Marketing_Promotion</fullName>
    <active>true</active>
    <label>Self Serve Marketing Promotion</label>
</RecordType>