unpackaged/main/default/objects/Campaign/recordTypes/Self_Serve_Renewal_campaigns.recordType-meta.xml
<RecordType>
    <fullName>Self_Serve_Renewal_campaigns</fullName>
    <active>true</active>
    <label>Self Serve Renewal campaigns</label>
</RecordType>