unpackaged/main/default/objects/Campaign/recordTypes/Tier_Pricing.recordType-meta.xml
<RecordType>
    <fullName>Tier_Pricing</fullName>
    <active>true</active>
    <label>Tier Pricing</label>
</RecordType>