unpackaged/main/default/objects/Campaign/recordTypes/VIP_Promotion.recordType-meta.xml
<RecordType>
    <fullName>VIP_Promotion</fullName>
    <active>true</active>
    <label>VIP Promotion</label>
</RecordType>