unpackaged/main/default/objects/Campaign/recordTypes/Winback_Promotion.recordType-meta.xml
<RecordType>
    <fullName>Winback_Promotion</fullName>
    <active>true</active>
    <label>Winback Promotion</label>
</RecordType>