unpackaged/main/default/objects/Campaign/validationRules/Camp_Active_Error.validationRule-meta.xml
<ValidationRule>
    <fullName>Camp_Active_Error</fullName>
    <active>true</active>
    <errorConditionFormula>AND(OR(TODAY()&lt; StartDate, TODAY()&gt; EndDate), IsActive, RecordType.Name=&quot;Marketing Promo&quot;)</errorConditionFormula>
    <errorMessage>Current date should be between Campaign Start Date and Campaign End Date.</errorMessage>
</ValidationRule>