unpackaged/main/default/objects/Campaign/validationRules/Camp_currency_according_to_country.validationRule-meta.xml
<ValidationRule>
    <fullName>Camp_currency_according_to_country</fullName>
    <active>false</active>
    <errorConditionFormula>IF(TEXT(Country__c) == &#39;Singapore&#39;,TEXT(CurrencyIsoCode)!=&#39;SGD&#39;, IF( TEXT(Country__c) == &#39;Malaysia&#39;,TEXT(CurrencyIsoCode)!=&#39;MYR&#39;,IF( TEXT(Country__c) == &#39;Thailand&#39;,TEXT(CurrencyIsoCode)!=&#39;THB&#39;,false)))</errorConditionFormula>
    <errorDisplayField>IsActive</errorDisplayField>
    <errorMessage>Campaign Currency should default to Country.</errorMessage>
</ValidationRule>