unpackaged/main/default/objects/Campaign/validationRules/Camp_Inactive_Error.validationRule-meta.xml
<ValidationRule>
    <fullName>Camp_Inactive_Error</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
TODAY()&gt;= StartDate,
TODAY()&lt;=EndDate,
!IsActive,
!ISNEW(),
ISCHANGED(IsActive),
RecordType.Name=&quot;Marketing Promo&quot;,
!$Permission.System_Admin_Compliance_Access
)</errorConditionFormula>
    <errorMessage>Current date should not be between Campaign Start Date and Campaign End Date.</errorMessage>
</ValidationRule>