unpackaged/main/default/objects/Campaign/validationRules/End_Date_and_End_Date_Time_is_blank.validationRule-meta.xml
<ValidationRule>
    <fullName>End_Date_and_End_Date_Time_is_blank</fullName>
    <active>true</active>
    <errorConditionFormula>AND(RecordType.Name=&quot;Marketing Promo&quot;,OR(ISBLANK(EndDate),ISBLANK(Campaign_End_DateTime__c)))</errorConditionFormula>
    <errorMessage>End Date and End Date Time should not be blank.</errorMessage>
</ValidationRule>