unpackaged/main/default/objects/Campaign/validationRules/Lock_Active_Campaign.validationRule-meta.xml
<ValidationRule>
    <fullName>Lock_Active_Campaign</fullName>
    <active>true</active>
    <description>Active Campaign cannot be edited.</description>
    <errorConditionFormula>AND( 
IsActive , 
 OR(
 RecordType.Name=&quot;Loyalty Promotion&quot;, 
 RecordType.Name=&quot;Marketing Promo&quot;, 
 RecordType.Name=&quot;Tier Pricing&quot;, 
 RecordType.Name=&quot;VIP Promotion&quot;
), 
OR(
 ISCHANGED(Name), 
 ISCHANGED(Country__c), 
 ISCHANGED(Description), 
 ISCHANGED(StartDate), 
 ISCHANGED(EndDate),
 ISCHANGED(Campaign_Start_DateTime__c),
 ISCHANGED(Campaign_Start_DateTime__c),
 ISCHANGED(Campaign_End_DateTime__c),
 ISCHANGED(OwnerId)
) 
)</errorConditionFormula>
    <errorDisplayField>IsActive</errorDisplayField>
    <errorMessage>Active Campaign cannot be edited.</errorMessage>
</ValidationRule>