unpackaged/main/default/objects/Campaign/validationRules/Start_Date_and_Start_Date_Time_is_blank.validationRule-meta.xml
<ValidationRule>
    <fullName>Start_Date_and_Start_Date_Time_is_blank</fullName>
    <active>true</active>
    <errorConditionFormula>AND(RecordType.Name=&quot;Marketing Promo&quot;,OR(ISBLANK(StartDate),ISBLANK(Campaign_Start_DateTime__c)))</errorConditionFormula>
    <errorMessage>Start Date and Start Date Time should not be blank.</errorMessage>
</ValidationRule>