unpackaged/main/default/objects/Campaign/listViews/Active_TH_Renewal_Campaigns_aft_Stinger.listView-meta.xml
<ListView>
    <fullName>Active_TH_Renewal_Campaigns_aft_Stinger</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>PARENT_NAME</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.END_DATE</columns>
    <columns>CAMPAIGN.NUM_CONTACTS</columns>
    <columns>CAMPAIGN.NUM_LEADS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Country__c</field>
        <operation>equals</operation>
        <value>Thailand</value>
    </filters>
    <filters>
        <field>CAMPAIGN.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Campaign.Renewal</value>
    </filters>
    <label>Active TH Renewal Campaigns aft Stinger</label>
</ListView>