unpackaged/main/default/objects/Campaign/listViews/All_Active_MY_Campaign.listView-meta.xml
<ListView>
    <fullName>All_Active_MY_Campaign</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.ACTIVE</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.END_DATE</columns>
    <columns>CAMPAIGN.LAST_UPDATE</columns>
    <columns>CAMPAIGN.CREATED_DATE</columns>
    <columns>CAMPAIGN.RECORDTYPE</columns>
    <columns>CAMPAIGN.NUM_CONTACTS</columns>
    <columns>Country__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CAMPAIGN.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Country__c</field>
        <operation>equals</operation>
        <value>Malaysia</value>
    </filters>
    <label>All Active MY Campaign</label>
</ListView>