unpackaged/main/default/objects/Campaign/listViews/All_B2B_Campaigns.listView-meta.xml
<ListView>
    <fullName>All_B2B_Campaigns</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.END_DATE</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <columns>CAMPAIGN.LAST_UPDATE</columns>
    <columns>CAMPAIGN.RECORDTYPE</columns>
    <columns>Country__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CAMPAIGN.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Campaign.B2B_Developer_Online_Form,Campaign.B2B_TM_Events</value>
    </filters>
    <label>All B2B Campaigns</label>
</ListView>