unpackaged/main/default/objects/Campaign/listViews/All_Campaign.listView-meta.xml
<ListView>
    <fullName>All_Campaign</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.END_DATE</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <columns>CAMPAIGN.LAST_UPDATE</columns>
    <columns>CAMPAIGN.RECORDTYPE</columns>
    <columns>Country__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Country__c</field>
        <operation>equals</operation>
        <value>Singapore,Malaysia,Thailand</value>
    </filters>
    <label>All Campaigns</label>
</ListView>